# SequentialDetector

./: .gitignore  .gitmodules  CMakeLists.txt  DetectorSequential.hpp  DetectorSequentialCharacteristics.hpp  DetectorSequentialHistograms.hpp  DetectorSequentialStatistics.hpp  FileDialogConfig.hpp  FontDroidSans.cpp  FontDroidSans.h  Generator.hpp  GeneratorConst.hpp  GeneratorHarmonic.hpp  GeneratorNormal.hpp  InfoSignal.hpp  Noise.hpp  NoiseSignal.hpp  README.md  Signal.hpp  SignalGenerator.hpp  WindowControlled.hpp  imgui.hpp  main.cpp  winMain.cpp  winSignal.cpp
